[project]
name = "helper-modules"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "customtkinter>=5.2.2",
    "gdown>=5.2.0",
    "google-api-python-client>=2.185.0",
    "google-cloud-bigquery>=3.38.0",
    "gspread>=6.2.1",
    "numpy>=2.3.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pandas-gbq>=0.29.2",
    "python-dotenv>=1.2.1",
    "tkcalendar>=1.6.1",
    "xlsxwriter>=3.2.9",
]
